--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -200,3 +200,9 @@
 	year={2019},
 	publisher={Routledge}
 }
+
+@article{luchman2022package,
+	title={Package ‘domir’},
+	author={Luchman, Joseph},
+	year={2022}
+}
