--- a/CountDominance.bib
+++ b/CountDominance.bib
@@ -206,3 +206,117 @@
 	author={Luchman, Joseph},
 	year={2022}
 }
+
+@article{lebreton2007multidimensional,
+	title={A multidimensional approach for evaluating variables in organizational research and practice},
+	author={LeBreton, James M and Hargis, Michael B and Griepentrog, Brian and Oswald, Frederick L and Ployhart, Robert E},
+	journal={Personnel Psychology},
+	volume={60},
+	number={2},
+	pages={475--498},
+	year={2007},
+	publisher={Wiley Online Library}
+}
+
+@article{tonidandel2010determining,
+	title={Determining the relative importance of predictors in logistic regression: An extension of relative weight analysis},
+	author={Tonidandel, Scott and LeBreton, James M},
+	journal={Organizational Research Methods},
+	volume={13},
+	number={4},
+	pages={767--781},
+	year={2010},
+	publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
+@article{thomas2014johnson,
+	title={On Johnson's (2000) relative weights method for assessing variable importance: A reanalysis},
+	author={Thomas, D Roland and Zumbo, Bruno D and Kwan, Ernest and Schweitzer, Linda},
+	journal={Multivariate behavioral research},
+	volume={49},
+	number={4},
+	pages={329--338},
+	year={2014},
+	publisher={Taylor \& Francis}
+}
+
+@article{johnson2000heuristic,
+	title={A heuristic method for estimating the relative weight of predictor variables in multiple regression},
+	author={Johnson, Jeff W},
+	journal={Multivariate behavioral research},
+	volume={35},
+	number={1},
+	pages={1--19},
+	year={2000},
+	publisher={Taylor \& Francis}
+}
+
+@book{molnar2020interpretable,
+	title={Interpretable machine learning},
+	author={Molnar, Christoph},
+	year={2020},
+	publisher={Lulu. com}
+}
+
+@article{castro2009polynomial,
+	title={Polynomial calculation of the Shapley value based on sampling},
+	author={Castro, Javier and G{\'o}mez, Daniel and Tejada, Juan},
+	journal={Computers \& Operations Research},
+	volume={36},
+	number={5},
+	pages={1726--1730},
+	year={2009},
+	publisher={Elsevier}
+}
+
+@article{fatima2008linear,
+	title={A linear approximation method for the Shapley value},
+	author={Fatima, Shaheen S and Wooldridge, Michael and Jennings, Nicholas R},
+	journal={Artificial Intelligence},
+	volume={172},
+	number={14},
+	pages={1673--1699},
+	year={2008},
+	publisher={Elsevier}
+}
+
+@article{sellereite2020shapr,
+	title={shapr: An R-package for explaining machine learning models with dependence-aware Shapley values},
+	author={Sellereite, Nikolai and Jullum, Martin},
+	journal={The Journal of Open Source Software},
+	volume={5},
+	number={46},
+	pages={2027},
+	year={2020}
+}
+
+@article{aas2021explaining,
+	title={Explaining individual predictions when features are dependent: More accurate approximations to Shapley values},
+	author={Aas, Kjersti and Jullum, Martin and L{\o}land, Anders},
+	journal={Artificial Intelligence},
+	volume={298},
+	pages={103502},
+	year={2021},
+	publisher={Elsevier}
+}
+
+@article{huettner2012axiomatic,
+	title={Axiomatic arguments for decomposing goodness of fit according to Shapley and Owen values},
+	author={Huettner, Frank and Sunder, Marco},
+	journal={Electronic Journal of Statistics},
+	volume={6},
+	pages={1239--1250},
+	year={2012},
+	publisher={Institute of Mathematical Statistics and Bernoulli Society}
+}
+
+@article{braun2019accuracy,
+	title={The accuracy of dominance analysis as a metric to assess relative importance: The joint impact of sampling error variance and measurement unreliability.},
+	author={Braun, Michael T and Converse, Patrick D and Oswald, Frederick L},
+	journal={Journal of Applied Psychology},
+	volume={104},
+	number={4},
+	pages={593},
+	year={2019},
+	publisher={American Psychological Association}
+}
